--- a/compra.html
+++ b/compra.html
@@ -121,7 +121,8 @@
                 </div>
             </div>        
         </div>
-        <a class="btn btn-primary" id="volver2" href="index.html" role="button">Volver al Inicio</a>
+        <a class="btn btn-primary" id="volver2" href="index.html" role="button">Volver al Inicio</a> <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title" data-bs-content="No se podrá hacer reembolso a ninguna compra que haya superado las 24 hrs de realizada.">Política de reembolsos</button>
+        
     </main>
 
     <footer>
